# 2026-06-mle-workshop

./: README.md
day_1/: Makefile  main.py  pyproject.toml
day_1/duration_prediction/: main.py  train.py
day_1/models/: 2022-01.pkl
day_1/notebooks/: duration-prediction-starter.ipynb
day_1/tests/: test_train.py
day_2/duration_pred_serve/: Dockerfile  Makefile  fly.toml  pyproject.toml
day_2/duration_pred_serve/scripts/: predict-test.py
day_2/duration_pred_serve/src/duration_pred_serve/: __init__.py  ping.py  serve.py
