[project]
name = "day-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pytest>=9.1.1",
    "scikit-learn==1.2.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
]
