[project]
name = "duration-pred-serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wadim", email = "ynotzort@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "pytest>=9.1.1",
    "scikit-learn==1.2.2",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "requests>=2.34.2",
]
